<resources>
    <string name="app_name">NinsFood-BinarCH3</string>
    <string name="text_header_name" translatable="false">Hai Binarian,</string>
    <string name="text_header_greeting">Mau makan apa hari ini?</string>
    <string name="text_search">Cari</string>
    <string name="text_discount" translatable="false">Discount 30%</string>
    <string name="text_discount_desc">Pesan Makanan lewat aplikasi dan\ndapatkan diskon mu</string>
    <string name="text_title_categories">Kategori</string>
    <string name="text_burger_category" translatable="false">Burger</string>
    <string name="text_noodle_category">Mie</string>
    <string name="text_juice_category">Jus</string>
    <string name="text_snack_category" translatable="false">Snack</string>
    <string name="text_header_list_menu">List Menu</string>
    <string name="text_fish_burger" translatable="false">Fish Burger</string>
    <string name="text_beef_burger" translatable="false">Beef Burger</string>
    <string name="text_chicken_burger" translatable="false">Chicken Burger</string>
    <string name="text_garden_burger" translatable="false">Garden Burger</string>
    <string name="text_price_fish_burger" translatable="false">Rp. 40.000</string>
    <string name="text_price_beef_burger" translatable="false">Rp. 45.000</string>
    <string name="text_price_chicken_burger" translatable="false">Rp. 20.000</string>
    <string name="text_price_garden_burger" translatable="false">Rp. 15.000</string>
    <string name="desc_background_banner" translatable="false">background_banner</string>
    <string name="desc_trolley_header" translatable="false">trolley header</string>
    <string name="desc_user_header" translatable="false">user header</string>
    <string name="desc_search" translatable="false">search</string>
    <string name="desc_discount_banner" translatable="false">discount_banner</string>
    <string name="desc_burger_category" translatable="false">burger category</string>
    <string name="desc_noodle_category" translatable="false">noodle category</string>
    <string name="desc_juice_category" translatable="false">juice category</string>
    <string name="desc_snack_category" translatable="false">snack_category</string>
    <string name="desc_view_all_list_menu" translatable="false">view all list menu</string>
    <string name="desc_fish_burger" translatable="false">fish burger</string>
    <string name="desc_icon_add_1" translatable="false">icon add 1</string>
    <string name="desc_beef_burger" translatable="false">beef burger</string>
    <string name="desc_icon_add_2" translatable="false">icon_add_2</string>
    <string name="desc_chicken_burger" translatable="false">chicken burger</string>
    <string name="desc_icon_add_3" translatable="false">icon add 3</string>
    <string name="desc_garden_burger" translatable="false">garden burger</string>
    <string name="desc_icon_add_4" translatable="false">icon add 4</string>
    <string name="text_title_menu" translatable="false">Fish Burger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_desc">Fillet ikan garing di atas roti bundar empuk dengan saus dan pelengkap lezat. Rasa dan kenikmatan dalam satu gigitan!</string>
    <string name="text_shop_location">Lokasi</string>
    <string name="text_desc_shop_location" translatable="false">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_cart">Tambahkan ke Keranjang</string>
    <string name="text_desc_ib_back">image button back</string>
    <string name="text_amount">1</string>
    <string name="text_desc_iv_minus">image view minus</string>
    <string name="text_desc_iv_plus">image view plus</string>
    <string name="text_desc_iv_menu">image view menu</string>
    <string name="text_desc_iv_shop_location">image view shop location</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_home">Home</string>
    <string name="text_header_cart">Keranjang</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_notes">Catatan :</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_cart_is_empty">Cart is empty</string>
    <string name="text_header_checkout">Konfirmasi Pesanan</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="total_quantity">x%s</string>
    <string name="text_no_hp">083823176895</string>
    <string name="text_username">Ninda Nura\'isyah</string>
    <string name="text_header_profile">Profile</string>
    <string name="text_title_username">Username\n</string>
    <string name="text_title_email">Email</string>
    <string name="text_email">nindanuraisyah0903@gmail.com</string>
    <string name="text_title_no_hp">No. Telepon</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="btn_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout_account">Logout</string>
    <string name="text_error_name_empty">Name can\\\'t be empty</string>
</resources>