<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.detailproduct.DetailProductActivity">

    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/img_fish_burger"
        android:contentDescription="@string/text_desc_iv_menu"/>

    <ImageButton
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/text_desc_ib_back"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title_list_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_menu">

        <TextView
            android:id="@+id/tv_title_list_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_title_menu" />

        <TextView
            android:id="@+id/tv_price_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_price_fish_burger" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_list_menu"
            tools:text="@string/text_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vw_line"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_title_list_menu" />

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vw_line">

        <ImageView
            android:id="@+id/iv_shop_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_shop_location_detail"
            android:contentDescription="@string/text_desc_iv_shop_location"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_shop_location"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_shop_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shop_location"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc_shop_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="@string/text_desc_shop_location" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/vw_line_2"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_button_rounded_border_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_minus"
                android:contentDescription="@string/text_desc_iv_minus"/>

            <TextView
                android:id="@+id/tv_number_amount_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_amount"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="14dp"/>

            <ImageView
                android:id="@+id/iv_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_plus"
                android:contentDescription="@string/text_desc_iv_plus"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_amount"
            android:backgroundTint="@color/orange"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>