<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_background_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_header_title_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/tv_header_name"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_header_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_header_greeting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_header_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_trolley_header"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/desc_trolley_header"
                android:src="@drawable/ic_trolley_header" />

            <ImageView
                android:id="@+id/iv_user_header"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/desc_user_header"
                android:src="@drawable/ic_user_header" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/pink"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/desc_search"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_search"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/cl_menu_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_search">

        <ImageView
            android:id="@+id/iv_background_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_background_banner"
            android:contentDescription="@string/desc_background_banner" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/ll_banner"
            android:layout_width="383dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_discount_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_discount_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_discount_banner"
                    android:src="@drawable/img_discount_banner" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_desc_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_banner"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/text_discount"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_desc_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_discount_desc"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/cl_title_list_menu"
        app:layout_constraintTop_toBottomOf="@+id/cv_banner">

        <TextView
            android:id="@+id/tv_title_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_title_categories"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_categories"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title_list_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/cl_menu_categories">

        <TextView
            android:id="@+id/tv_title_list_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_header_list_menu"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_list_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_title_list_menu"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_linear_menu"
        tools:spanCount="1" />

</androidx.constraintlayout.widget.ConstraintLayout>